added real portrait image, working contact links

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <button type="button" id="contact-button" class="nav-button">Contact</button>
     </nav>
     <header role="header-content">
-      <img src="images/portrait.jpg" alt="self-portrait" id="portrait">
+      <img src="images/portfoliophoto.JPG" alt="self-portrait" id="portrait">
       <div id="hero"> 
         <h1 id="headline">
           Hi, I’m <span class="red">Tim.</span>
