--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
     </p>
   </section>
   <section role="portfolio" id="portfolio" class="primary">
+    <h2>Portfolio</h2>
     <section id="quiz">
-      <h2>Portfolio</h2>
       <h3>State Amphibian Quiz</h3>
       <img src="images/amphibianappmockup.jpg" alt="screenshot of Amphibian App" class="portfolio-photo">
       <ul class="live">
@@ -55,6 +55,24 @@
         <li><i class="devicon-jquery-plain-wordmark colored"></i></li>
       </ul>
     </section>
+    <hr>
+    <section id="booksplorer">
+        <h3>Booksplorer</h3>
+        <img src="images/Screen Shot - BookApp- Macbook.png" alt="screenshot of booksplorer application" class="portfolio-photo">
+        <ul class="live">
+          <li><button type="button" id="booksplorer-live" class="live-button">Live</button></li>
+          <li><button type="button" id="booksplorer-github" class="live-button">Github</button></li>
+        </ul>   
+        <p>Create a personalized reading list based on your favorite books. Just enter three of your favorite titles to get started.</p> 
+        </br>
+        <h4>Technologies used:</h4>
+        <ul class="technology-used-icons">
+          <li><i class="devicon-html5-plain-wordmark colored"></i></li>
+          <li><i class="devicon-css3-plain-wordmark colored"></i></li>
+          <li><i class="devicon-javascript-plain"></i></li>
+          <li><i class="devicon-jquery-plain-wordmark colored"></i></li>
+        </ul>
+      </section>
   </section>
   <section role="contact" id="contact" class="primary">
     <h2>Contact Me</h2>
