--- a/index.html
+++ b/index.html
@@ -6,77 +6,90 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Timothy Putzke - Fullstack Web Developer</title>
   <link rel="stylesheet" href="style.css">
-  <link href="https://fonts.googleapis.com/css?family=Playfair+Display|Source+Sans+Pro:400,700i&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+  <link rel="icon" href="/images/favicon.ico">
 </head>
 <body>
   <main role="main">
-    <nav> 
-      <span id="nav-name">Timothy Putzke</span>
+    <nav class="nav-down"> 
       <button type="button" id="about-button" class="nav-button">About</button>
-      <button type="button" id="portfolio-button" class="nav-button">Portfolio</button>
+      <button type="button" id="portfolio-button" class="nav-button">Projects</button>
       <button type="button" id="contact-button" class="nav-button">Contact</button>
     </nav>
     <header role="header-content">
-      <img src="images/portfoliophoto.JPG" alt="self-portrait" id="portrait">
       <div id="hero"> 
         <h1 id="headline">
           Hi, I’m <span class="red">Tim.</span>
         </br></br>
-          I’m a <span class="red">Full Stack Developer</span> creating awesome, user centered applications.
+          I'm a web developer focused on creating awesome, user-friendly experiences.
         </h1>
+      </div>
+      <div class="arrow bounce">
+        <a class="fa fa-arrow-down fa-2x" href="#"></a>
       </div>
     </header> 
   </main> 
   <section role="aboutMe" id="about-me" class="primary">
-    <h2>About Me</h2>
-    <p>I am a web-developer passionate about UX and clean code. I love the process of discovering eloquent solutions to technical problems, and bringing ideas to life. I am experienced in HTML, CSS, and Javascript. 
-    </br></br> 
-    I currently live in Raleigh, NC, and when I am not coding I may be found gardening, cooking, or building robots out of legos with my two daughters.
-    </p>
+      <img src="images/portfoliophoto.png" alt="self-portrait" id="portrait">
+      <div>
+        <h2>About Me</h2>
+        <p>My experience has been programming in JavaScript, using React and Node.js, but I am interested in continually learning and growing as a developer. I am passionate about UX design and clean code. I love the process of discovering eloquent solutions to technical problems, and bringing ideas to life. 
+        </br></br> 
+        I currently live in Raleigh, NC, and when I am not coding I may be found gardening, cooking, or building robots out of legos with my two daughters.
+        </p>
+      </div>
   </section>
   <section role="portfolio" id="portfolio" class="primary">
-    <h2>Portfolio</h2>
-    <section id="quiz">
-      <h3>State Amphibian Quiz</h3>
-      <img src="images/amphibianappmockup.jpg" alt="screenshot of Amphibian App" class="portfolio-photo">
-      <ul class="live">
-        <li><button type="button" id="amphibian-live" class="live-button">Live</button></li>
-        <li><button type="button" id="amphibian-github" class="live-button">Github</button></li>
-      </ul>   
-      <p>How well do you know your state amphibians? Test your knowledge with this quiz app.</p> 
+    <h2>Projects</h2>
+    <section id="cultivate">
+      <h3>Cultivate</h3>
+      <div class='portfolio-wrap'>
+        <img src="images/Cultivate-ScreenshotMockup.jpg" alt="screenshot of Cultivate App" class="portfolio-photo cultivate-img">
+      </div>
+      <p>A data logging application to track environmental factors for plant and mushroom grow spaces.</p> 
       </br>
       <h4>Technologies used:</h4>
-      <ul class="technology-used-icons">
-        <li><i class="devicon-html5-plain-wordmark colored"></i></li>
-        <li><i class="devicon-css3-plain-wordmark colored"></i></li>
-        <li><i class="devicon-javascript-plain"></i></li>
-        <li><i class="devicon-jquery-plain-wordmark colored"></i></li>
-      </ul>
+      <table class="technology-used-icons">
+        <tbody>
+          <tr>
+            <td><i class="devicon-html5-plain-wordmark colored"></i></td>
+            <td><i class="devicon-css3-plain-wordmark colored"></i></td>
+            <td><i class="devicon-javascript-plain"></i></td>
+          </tr>
+          <tr>
+            <td><i class="devicon-react-original-wordmark colored"></i></td>
+            <td><i class="devicon-nodejs-plain-wordmark colored"></i></td>
+            <td><i class="devicon-postgresql-plain-wordmark colored"></i></td>
+          </tr>
+        </tbody>
+      </table>
     </section>
     <hr>
     <section id="booksplorer">
         <h3>Booksplorer</h3>
-        <img src="images/Screen Shot - BookApp- Macbook.png" alt="screenshot of booksplorer application" class="portfolio-photo">
-        <ul class="live">
-          <li><button type="button" id="booksplorer-live" class="live-button">Live</button></li>
-          <li><button type="button" id="booksplorer-github" class="live-button">Github</button></li>
-        </ul>   
+        <div class='portfolio-wrap'>
+          <img src="images/Screen Shot - BookApp- Macbook.png" alt="screenshot of booksplorer application" class="portfolio-photo booksplorer-img">
+        </div>     
         <p>Create a personalized reading list based on your favorite books. Just enter three of your favorite titles to get started.</p> 
         </br>
         <h4>Technologies used:</h4>
-        <ul class="technology-used-icons">
-          <li><i class="devicon-html5-plain-wordmark colored"></i></li>
-          <li><i class="devicon-css3-plain-wordmark colored"></i></li>
-          <li><i class="devicon-javascript-plain"></i></li>
-          <li><i class="devicon-jquery-plain-wordmark colored"></i></li>
-        </ul>
+        <table class="technology-used-icons">
+            <tbody>
+              <tr>
+                <td><i class="devicon-html5-plain-wordmark colored"></i></td>
+                <td><i class="devicon-css3-plain-wordmark colored"></i></td>
+                <td><i class="devicon-javascript-plain"></i></td>
+                <td><i class="devicon-jquery-plain-wordmark colored"></i></td>
+              </tr>
+            </tbody>
+          </table>
       </section>
   </section>
   <section role="contact" id="contact" class="primary">
     <h2>Contact Me</h2>
-    <p>Feel free to <span class="red">reach out!</span> I love connecting to discuss work, current projects, or answer any questions. I truly enjoy helping people, and making great applications.</p>
+    <p>Feel free to <span class="red">reach out!</span> I love connecting to discuss current projects, collaborate, or answer any questions. I truly enjoy helping people, and making great applications.</p>
     <div role="icon-menu" id="icon-menu">
         <ul id="menu-icons">
           <li id="email"><i class="fas fa-envelope"></i></li>
